--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-"presets": ["react-native"]
+  "presets": [
+    "react-native"
+  ],
+  "plugins": [
+    ["babel-plugin-root-import", {
+      "rootPathSuffix": "src"
+    }]
+  ]
 }
