--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "~15.4.1",
     "react-native": "0.42.0",
     "react-native-firebase": "0.0.2",
+    "react-native-simple-toast": "0.0.5",
     "react-native-vector-icons": "^4.0.0",
     "react-navigation": "^1.0.0-beta.6",
     "react-redux": "^5.0.3",
