--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "firebase": "^3.7.0",
     "lodash.groupby": "^4.6.0",
     "react": "~15.4.1",
-    "react-native": "0.42.0",
+    "react-native": "0.40.0",
     "react-native-firebase": "0.0.2",
     "react-native-simple-toast": "0.0.5",
     "react-native-vector-icons": "^4.0.0",
@@ -23,7 +23,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.8.2",
     "redux-persist": "^4.4.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "should": "^11.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
