--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.4.7",
     "deeps": "^1.4.4",
     "firebase": "^3.7.0",
+    "js-beautify": "^1.6.11",
     "lodash.groupby": "^4.6.0",
     "react": "~15.4.1",
     "react-native": "0.40.0",
