added missing ignores

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ project.xcworkspace
 
 # Android/IntelliJ
 #
-build/
+
 android/gradle
 .idea
 .gradle
@@ -55,3 +55,7 @@ buck-out/
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+ios/Podfile
+ios/Podfile.lock
+ios/Pods/
+ios/ReactNativeFirebaseDemo.xcworkspace/
