--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "bows": "^1.6.0",
+    "cuid": "^1.3.8",
     "deeps": "^1.4.4",
     "firebase": "^3.7.0",
     "js-beautify": "^1.6.11",
