--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lodash.groupby": "^4.6.0",
     "react": "~15.4.1",
     "react-native": "0.40.0",
-    "react-native-firebase": "0.0.2",
+    "react-native-firebase": "^1.0.0-alpha4",
     "react-native-simple-toast": "0.0.5",
     "react-native-vector-icons": "^4.0.0",
     "react-navigation": "^1.0.0-beta.7",
