--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "redux-logger": "^2.8.2",
     "redux-persist": "^4.4.2",
     "redux-thunk": "^2.2.0",
-    "should": "^11.2.0"
+    "should": "^11.2.0",
+    "should-sinon": "^0.0.5",
+    "sinon": "1"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
