--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,9 @@
         }
       ]
     ]
+  ],
+  "ignore": [
+    "node_modules/diff/lib/**/*.js",
+    "node_modules/diff/node_modules/**/*.js"
   ]
 }
