--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/invertase/react-native-firebase-tests#readme",
   "dependencies": {
+    "babel-preset-es2015-mod": "^6.6.0",
+    "babel-preset-es3": "^1.0.1",
     "bluebird": "^3.4.7",
     "bows": "^1.6.0",
     "cuid": "^1.3.8",
@@ -40,7 +42,7 @@
     "redux-thunk": "^2.2.0",
     "should": "^11.2.0",
     "should-sinon": "^0.0.5",
-    "sinon": "1"
+    "sinon": "https://github.com/greena13/sinon.git"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
